style: prevent link buttons wrapping

--- a/react-development-proj/src/components/MyLink/MyLink.module.css
+++ b/react-development-proj/src/components/MyLink/MyLink.module.css
@@ -14,6 +14,8 @@ For now, disabling styles here, until a way to style is decided upon
 }
 
 .myLinkAsButton {
+    display: inline-block;      /* Allows the element to behave like a block for layout (accepts width/height) while still flowing inline with other content. */
+    cursor: pointer;            /* Indicates to users that the element is clickable. */
     margin: 30px;
     margin-top: 0px;
     background-color: black;
@@ -24,6 +26,7 @@ For now, disabling styles here, until a way to style is decided upon
     font-size: 1em;
     font-weight: 500;
     text-decoration: none;
+    white-space: normal;
 }
 
 .myLinkAsButton:focus-visible {
